
  The database got additional configurations options (`cache-size-bytes`
  and `historical-cache-size-bytes`) to limit the
  cache size based on the estimated total size of cached objects.
  The default values are 0 which has the interpretation "do not limit
  based on the total estimated size".
  There are corresponding methods to read and set the new configuration
  parameters.

3.9.0a12 (2009-02-26)
=====================

Bugs Fixed
----------

- Connections from old ZEO clients weren't discarded when they were
  closed causing memory to leak and invalidations to become
  increasingly expensive over time.

- The monitor server didn't correctly report the actual number of
  clients. 

3.9.0a11 (2009-02-17)
=====================

Bugs Fixed
----------

- Packing a blob-enabled file storage in a ZEO server caused blob data
  to be lost.

- Packing could return spurious errors due to errors notifying
  disconnected clients of new database size statistics.

3.9.0a10 (2009-01-05)
=====================

Bugs Fixed
----------

- Undo sometimes failed for FileStorages configured to support blobs.

3.9.0a9 (2009-01-04)
====================

New Features
------------

- FileStorage now supports blobs directly.

- You can now control whether FileStorages keep .old files when packing.

- POSKeyErrors are no longer logged by ZEO servers, because they are
  really client errors.

- A new storage interface, IExternalGC, to support external garbage
  collection, http://wiki.zope.org/ZODB/ExternalGC, has been defined
  and implemented for FileStorage and ClientStorage.

- As a small convenience (mainly for tests), you can now specify
  initial data as a string argument to the Blob constructor.

- ZEO Servers now provide an option, invalidation-age, that allows
  quick verification of ZEO clients less than a given age even if the
  number of transactions the client hasn't seen exceeds the
  invalidation queue size. This is only recommended if the storage